# aoc2022

./: .gitignore  Cargo.toml  README.md  justfile
aoc/: Cargo.toml
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-benchmarking/src/: helper_macros.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs
aoc-plumbing/: Cargo.toml
aoc-plumbing/src/: bits.rs  geometry.rs  lib.rs
aoc/src/: lib.rs
ci/: pipeline.yaml
ci/tasks/: test-and-bench.yaml
day-001-calorie-counting/: Cargo.toml  README.md
day-001-calorie-counting/src/: lib.rs
day-002-rock-paper-scissors/: Cargo.toml  README.md
day-002-rock-paper-scissors/src/: lib.rs
day-003-rucksack-reorganization/: Cargo.toml  README.md
day-003-rucksack-reorganization/src/: lib.rs
day-004-camp-cleanup/: Cargo.toml  README.md
day-004-camp-cleanup/src/: lib.rs
day-005-supply-stacks/: Cargo.toml  README.md  input.txt
day-005-supply-stacks/src/: lib.rs
day-006-tuning-trouble/: Cargo.toml  README.md
day-006-tuning-trouble/src/: lib.rs
day-007-no-space-left-on-device/: Cargo.toml  README.md
day-007-no-space-left-on-device/src/: lib.rs
day-008-treetop-tree-house/: Cargo.toml  README.md
day-008-treetop-tree-house/src/: lib.rs
day-009-rope-bridge/: Cargo.toml  README.md
day-009-rope-bridge/src/: lib.rs
day-010-cathode-ray-tube/: Cargo.toml  README.md
day-010-cathode-ray-tube/src/: lib.rs
day-011-monkey-in-the-middle/: Cargo.toml  README.md
day-011-monkey-in-the-middle/src/: lib.rs
day-012-hill-climbing-algorithm/: Cargo.toml  README.md
day-012-hill-climbing-algorithm/src/: lib.rs
day-013-distress-signal/: Cargo.toml  README.md
day-013-distress-signal/src/: lib.rs
day-014-regolith-reservoir/: Cargo.toml  README.md
day-014-regolith-reservoir/src/: lib.rs
day-015-beacon-exclusion-zone/: Cargo.toml  README.md
day-015-beacon-exclusion-zone/src/: lib.rs
day-016-proboscidea-volcanium/: Cargo.toml  README.md
day-016-proboscidea-volcanium/src/: lib.rs
day-017-pyroclastic-flow/: Cargo.toml  README.md
day-017-pyroclastic-flow/src/: lib.rs
day-018-boiling-boulders/: Cargo.toml  README.md
day-018-boiling-boulders/src/: lib.rs
day-019-not-enough-minerals/: Cargo.toml  README.md
day-019-not-enough-minerals/src/: lib.rs
day-020-grove-positioning-system/: Cargo.toml  README.md
day-020-grove-positioning-system/src/: lib.rs
day-021-monkey-math/: Cargo.toml  README.md
day-021-monkey-math/src/: lib.rs
day-022-monkey-map/: Cargo.toml  README.md
day-022-monkey-map/src/: lib.rs
day-023-unstable-diffusion/: Cargo.toml  README.md
day-023-unstable-diffusion/src/: lib.rs
day-024-blizzard-basin/: Cargo.toml  README.md
day-024-blizzard-basin/src/: lib.rs
day-025-full-of-hot-air/: Cargo.toml  README.md
day-025-full-of-hot-air/src/: lib.rs
scripts/: agg-bench.sh  new.sh
template/: Cargo.toml
template/src/: lib.rs
