[workspace]
members = [
    "aoc-benchmarking",
    "aoc-cli",
    "aoc-plumbing",
    # "day-*",
]

exclude = ["template"]

[workspace.dependencies]
anyhow = "1.0.65"
aoc_helpers = { git = "https://github.com/mattcl/aoc-helpers" }
itertools = "0.10.5"
nom = { version = "7.1", features = ["alloc"] }
num = "0.4.0"
rayon = "1.5.3"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.35"

[profile.release]
lto = true
