[package]
name = "aoc-cli"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2021"
description = "A command line interface for executing Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[features]
par = ["distress-signal/par"]

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
calorie-counting = { path = "../day-001-calorie-counting" }
rock-paper-scissors = { path = "../day-002-rock-paper-scissors" }
rucksack-reorganization = { path = "../day-003-rucksack-reorganization" }
camp-cleanup = { path = "../day-004-camp-cleanup" }
supply-stacks = { path = "../day-005-supply-stacks" }
tuning-trouble = { path = "../day-006-tuning-trouble" }
no-space-left-on-device = { path = "../day-007-no-space-left-on-device" }
treetop-tree-house = { path = "../day-008-treetop-tree-house" }
rope-bridge = { path = "../day-009-rope-bridge" }
cathode-ray-tube = { path = "../day-010-cathode-ray-tube" }
monkey-in-the-middle = { path = "../day-011-monkey-in-the-middle" }
hill-climbing-algorithm = { path = "../day-012-hill-climbing-algorithm" }
distress-signal = { path = "../day-013-distress-signal" }
regolith-reservoir = { path = "../day-014-regolith-reservoir" }
beacon-exclusion-zone = { path = "../day-015-beacon-exclusion-zone" }
proboscidea-volcanium = { path = "../day-016-proboscidea-volcanium" }
