[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
description = "an export of the aoc solutions for external benchmarking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
calorie-counting = { path = "../day-001-calorie-counting" }
rock-paper-scissors = { path = "../day-002-rock-paper-scissors" }
rucksack-reorganization = { path = "../day-003-rucksack-reorganization" }
camp-cleanup = { path = "../day-004-camp-cleanup" }
supply-stacks = { path = "../day-005-supply-stacks" }
tuning-trouble = { path = "../day-006-tuning-trouble" }
no-space-left-on-device = { path = "../day-007-no-space-left-on-device" }
treetop-tree-house = { path = "../day-008-treetop-tree-house" }
rope-bridge = { path = "../day-009-rope-bridge" }
cathode-ray-tube = { path = "../day-010-cathode-ray-tube" }
monkey-in-the-middle = { path = "../day-011-monkey-in-the-middle" }
hill-climbing-algorithm = { path = "../day-012-hill-climbing-algorithm" }
distress-signal = { path = "../day-013-distress-signal" }
regolith-reservoir = { path = "../day-014-regolith-reservoir" }
